Fixing z-indexing problem--don't mix opacities

--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -53,22 +53,19 @@ body {
 
 .title-container {
   height:200px;
-  transform: translateY(50%);
+  padding-top: 100px;
 }
 
 .post-title {
-  padding: 0;
-  margin: 0;
   color: white;
+  margin: 0;
   font-weight: 100;
   font-size: 4rem;
 }
 
 .post-subtitle {
   color: white;
-  opacity: 0.6;
   font-weight: 100;
-  font-size: 2rem;
 }
 
 .content-container {
